@@ -11,7 +11,7 @@
 		<languageKey index="default" type="array">
 			<label index="mod_linkvalidator">Link validator</label>
 			<label index="tasks.validate.name">Link validator</label>
-			<label index="tasks.validate.description">Search for broken links and store the result into the temporary table tx_linkvalidator_links in order to ease up the backend module.</label>
+			<label index="tasks.validate.description">Search for broken links and store the result into the temporary table tx_linkvalidator_link in order to ease up the backend module.</label>
 			<label index="tasks.validate.page">Start page (uid)</label>
 			<label index="tasks.validate.depth">Depth</label>
 			<label index="tasks.validate.conf">Overwrite TSconfig</label>
