@@ -366,7 +366,7 @@ class tx_linkvalidator_modfunc1 extends t3lib_extobjbase {
 
 		if (($res = $GLOBALS['TYPO3_DB']->exec_SELECTquery(
 			'*',
-			'tx_linkvalidator_links',
+			'tx_linkvalidator_link',
 			'recpid in (' . $pageList . ') and typelinks in (\'' . implode("','", $keyOpt) . '\')',
 			'',
 			'recuid ASC, uid ASC')
