@@ -4,6 +4,7 @@
 	* Fixed bug #12412: XSS issue in tx_linkvalidator_tasks_ValidateAdditionalFieldProvider
 	* Fixed bug #12419: Use American English for "analyseRecord"
 	* Fixed bug #12420: Indentation in modfunc1, getTemplateMarkers()
+	* Fixed bug #12421: Rename tx_linkvalidator_links to tx_linkvalidator_link
 
 2011-01-19  Michael Miousse  <michael.miousse@infoglobe.ca> 
 
